HTML foster-parenting algorithm no longer requires foster parents to be elements https://bugs.webkit.org/show_bug.cgi?id=137501

Reviewed by Chris Dumez.

Merge https://src.chromium.org/viewvc/blink?revision=183370&view=revision

This patch updates the foster parenting algorithm to match the spec and behavior of Blink.

* LayoutTests/fast/parser/foster-parent-expected.txt:
* LayoutTests/fast/parser/foster-parent.html:
* LayoutTests/html5lib/resources/template.dat:

* Source/WebCore/html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::findFosterSite):

Canonical link: https://commits.webkit.org/253504@main